# webscraping_ragchatbot

./: .gitignore  README.md  dockerfile  main.py  pyproject.toml
Utils/: RAG.py  Splitter.py  VectorDB.py  WebScraper.py  __init__.py
app/: PrepareDatabase.py  chatbot.py
